--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -16,7 +16,7 @@
 {% endif %}
 
 <!-- Fontawesome icons (with my kit v6.0) -->
-<script async src="https://kit.fontawesome.com/9d4dd29536.js" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/9d4dd29536.js" crossorigin="anonymous"></script>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LE3WKQ7KKQ"></script>
