--- a/_includes/list_of_work_experience.html
+++ b/_includes/list_of_work_experience.html
@@ -27,13 +27,16 @@
 
 {% assign previous_year = work.year %}
 <div class="row">
+  {% assign img = '/assets/img/experiences/' | append: work.image.src %}
+  {% assign img = (img) | replace: "%20", " " %}
   <!-- {{ work.name }} -->
   <div class="card col-md-5 mt-4 shadow p-3 mb-4 {% if mod == 1 %}me-auto left arrow_box_right{% else %}ms-auto right arrow_box_left{% endif %} anim">
     <div class="row g-0">
       {% if mod!= 1 %}
       <a class="col-md-4 order-1 order-md-1 d-md-flex align-items-center text-center bg-light" target="_blank" href="{{ work.image.link }}">
-        <img src="/assets/img/experiences/{{ work.image.src }}" alt="{{ work.image.alt }}" class="img-fluid rounded m-2 mx-auto" width="auto"
-          style="max-height: {% if work.image.rectangle == true %}5rem{% else %}10rem{% endif %};"> <!-- 10rem pour les logos carrés - 5rem pour ceux rectangulaires -->
+        <img src="/assets/img/placeholder.png" data-src="{{ img }}" alt="{{ work.image.alt }}" class="img-fluid rounded m-2 mx-auto lazyloading"
+        width="{% imagesize picture:width %}" height="{% imagesize picture:height %}" loading="lazy"
+          style="width:auto;max-height: {% if work.image.rectangle == true %}5rem{% else %}10rem{% endif %};"/> <!-- 10rem pour les logos carrés - 5rem pour ceux rectangulaires -->
       </a>
       {% endif %}
       <div class="col-md-8 order-2 {% if mod == 1 %}order-md-1{% else %}order-md-2{% endif %} d-flex align-items-center">
@@ -60,8 +63,9 @@
       </div>
       {% if mod == 1 %}
       <a class="col-md-4 order-1 order-md-2 d-md-flex align-items-center text-center bg-light" target="_blank" href="{{ work.image.link }}">
-        <img src="/assets/img/experiences/{{ work.image.src }}" alt="{{ work.image.alt }}" class="img-fluid rounded m-2 mx-auto" width="auto"
-          style="max-height: {% if work.image.rectangle == true %}5rem{% else %}10rem{% endif %};"> <!-- 10rem pour les logos carrés - 5rem pour ceux rectangulaires -->
+        <img src="/assets/img/placeholder.png" data-src="{{ img }}" alt="{{ work.image.alt }}" class="img-fluid rounded m-2 mx-auto lazyloading"
+        width="{% imagesize picture:width %}" height="{% imagesize picture:height %}" loading="lazy"
+          style="width:auto;max-height: {% if work.image.rectangle == true %}5rem{% else %}10rem{% endif %};"/> <!-- 10rem pour les logos carrés - 5rem pour ceux rectangulaires -->
       </a>
       {% endif %}
     </div>
