remove jekyll-image-size plugin
:warning: use official plugin to avoid problem with Github Action
https://pages.github.com/versions/

--- a/_includes/list_of_projects.html
+++ b/_includes/list_of_projects.html
@@ -8,13 +8,13 @@
       {% assign icon = '/assets/img/projects/' | append: project.icon.name %}
       {% assign icon = (icon) | replace: "%20", " " %}
         <div class="d-flex align-items-center">
-          <img src="/assets/img/placeholderTransparent.png" data-src="{{ icon }}" class="rounded icon m-2 lazyloading" alt="{{ project.icon.alt }}" width="{% imagesize icon:width %}" height="{% imagesize icon:height %}" loading="lazy"/>
+          <img src="/assets/img/placeholderTransparent.png" data-src="{{ icon }}" class="rounded icon m-2 lazyloading" alt="{{ project.icon.alt }}" width="200" height="200" loading="lazy"/>
         </div>
       {% endif %}
       {% assign picture = '/assets/img/projects/' | append: project.image.name %}
       {% assign picture = (picture) | replace: "%20", " " %}
         <div class="col-12 d-flex align-items-center">
-          <img src="/assets/img/placeholder.png" data-src="{{ picture }}" class="rounded mx-auto lazyloading" alt="{{ project.image.alt }}" width="{% imagesize picture:width %}" height="{% imagesize picture:height %}" loading="lazy"/>
+          <img src="/assets/img/placeholder.png" data-src="{{ picture }}" class="rounded mx-auto lazyloading" alt="{{ project.image.alt }}" width="500" height="200" loading="lazy"/>
         </div>
       </div>
     </div>
