--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,8 +13,9 @@
                     {% for nav in site.data.navbar %}
                     <li class="nav-item ms-1 me-1 {% if page.url ==  nav.link %}active{% endif %}">
                         <a class="nav-link" href="{{ nav.link }}">
-                            <span class="fr">{{ nav.name.fr }}{% if page.url ==  nav.link %} <span class="sr-only">(actuel)</span>{% endif %}</span>
-                            <span class="en">{{ nav.name.en }}{% if page.url ==  nav.link %} <span class="sr-only">(current)</span>{% endif %}</span>
+                          {% for lang in site.languages %}
+                            <span class="{{ lang }}">{{ nav.name[lang] }}{% if page.url ==  nav.link %} <span class="sr-only">(actuel)</span>{% endif %}</span>
+                          {% endfor %}
                         </a>
                     </li>
                     {% endfor %}
