--- a/_includes/list_of_diplomas.html
+++ b/_includes/list_of_diplomas.html
@@ -5,24 +5,27 @@
     <div class="card-body">
         <div class="row">
             <div class="col-7">
-                <h3 class="card-title fr">{{ diploma.title.fr }}</h3>
-                <h3 class="card-title en">{{ diploma.title.en }}</h3>
-                <p class="card-subtitle fr"><i class="fas fa-map-marker-alt"></i> {{ diploma.location.fr }}</p>
-                <p class="card-subtitle en"><i class="fas fa-map-marker-alt"></i> {{ diploma.location.en }}</p>
+              {% for lang in site.languages %}
+                <h3 class="card-title {{ lang }}">{{ diploma.title[lang] }}</h3>
+                <p class="card-subtitle {{ lang }}"><i class="fas fa-map-marker-alt"></i> {{ diploma.location[lang] }}</p>
+              {% endfor %}
             </div>
             <div class="col-5 text-end">
-                <h4 class="fr"><i class="fas fa-calendar-alt"></i> {{ diploma.date.fr }}</h4>
-                <h4 class="en"><i class="fas fa-calendar-alt"></i> {{ diploma.date.en }}</h4>
+              {% for lang in site.languages %}
+                <h4 class="{{ lang }}"><i class="fas fa-calendar-alt"></i> {{ diploma.date[lang] }}</h4>
+              {% endfor %}
             </div>
         </div>
         <div class="row mt-3">
             <div class="col-8 align-self-center">
-                <h5 class="card-subtitle fr">{{ diploma.sub_title.fr }}</h5>
-                <h5 class="card-subtitle en">{{ diploma.sub_title.en }}</h5>
+              {% for lang in site.languages %}
+                <h5 class="card-subtitle {{ lang }}">{{ diploma.sub_title[lang] }}</h5>
+              {% endfor %}
             </div>
             <div class="col-4 text-end align-self-center">
-                <h4><span class="badge bg-{{ diploma.progress_bar.class }} fr">{{ diploma.badge.fr }}</span></h4>
-                <h4><span class="badge bg-{{ diploma.progress_bar.class }} en">{{ diploma.badge.en }}</span></h4>
+              {% for lang in site.languages %}
+                <h4><span class="badge bg-{{ diploma.progress_bar.class }} {{ lang }}">{{ diploma.badge[lang] }}</span></h4>
+              {% endfor %}
             </div>
         </div>
         <div class="row mt-3 mb-3">
