--- a/_includes/head.html
+++ b/_includes/head.html
@@ -51,3 +51,7 @@
 {% endif %}
 
 {% endif %}
+
+{% if jekyll.environment == 'production' and site.google_analytics %}
+    {% include google-analytics.html %}
+{% endif %}
